--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <script>
+        // Check if user is logged in
+        if (!localStorage.getItem('currentUser')) {
+          // If not logged in, redirect to login page
+          window.location.href = './login.html';
+        }
+      </script>
+      
     <header>
         <nav>
             <div class="nav-container">
